MOON-83: Fix PrimaryNav's icon alignment (#100)

--- a/src/components/PrimaryNav/PrimaryNavItem/PrimaryNavItem.scss
+++ b/src/components/PrimaryNav/PrimaryNavItem/PrimaryNavItem.scss
@@ -6,7 +6,6 @@
     align-items: center;
     height: 2.5rem;
     margin: 0.5rem;
-    padding: var(--spacing-nano);
 
     color: var(--color-light);
 
@@ -78,6 +77,7 @@
     flex-direction: column;
     justify-content: right;
     overflow: hidden;
+    margin: 0 var(--spacing-nano);
 }
 
 .primaryNavItem_linkItem {
